syntax = "proto3";

package x.proxy;
option go_package = "github.com/5vnetwork/vx-core/app/configs/proxy";
import "protos/user.proto";

enum SecurityType {
  SecurityType_UNKNOWN = 0;
  SecurityType_LEGACY = 1;
  SecurityType_AUTO = 2;
  SecurityType_AES128_GCM = 3;
  SecurityType_CHACHA20_POLY1305 = 4;
  SecurityType_NONE = 5;
  SecurityType_ZERO = 6;
}

message VmessClientConfig {
  string id = 3;
  SecurityType security = 4;
  bool special = 6;
  uint32 alter_id = 7;
}


message VmessServerConfig {
  repeated x.UserConfig accounts = 1;
  bool secure_encryption_only = 4;
}
